--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,6 @@
         <include src="./partials/footer.html"></include>
     </footer>
 
-
+<script src="./index.js"></script>
   </body>
 </html>
